--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
-  "name": "cosmic-clash",
+  "name": "tech-friends",
   "version": "1.0.0",
-  "description": "Group 1 Project 3",
-  "main": "server.js",
+  "description": "",
+  "main": "server/server.js",
+  "Important for MERN Setup": {
+    "line-10": "We use this top-level package.json file to define scripts we can run to control our entire application from the same CLI location",
+    "line-21": "The concurrently npm tool allows us to execute two CLI processes... concurrently!"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server/server.js",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "seed": "cd server && npm run seed",
+    "build": "cd client && npm run build"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "concurrently": "^8.2.0"
+  }
 }
