--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,12 @@
     "@apollo/client": "^3.7.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1", 
+    "jwt-decode": "^3.1.2", 
+     "graphql": "^16.6.0",
+    "happy-dom": "^9.20.3",
+    "vitest": "^1.4.0"
+
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
