--- a/client/package.json
+++ b/client/package.json
@@ -11,14 +11,14 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.16",
+    "graphql": "^16.6.0",
+    "happy-dom": "^9.20.3",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1", 
-    "jwt-decode": "^3.1.2", 
-     "graphql": "^16.6.0",
-    "happy-dom": "^9.20.3",
+    "react-router-dom": "^6.14.1",
+    "uikit": "^3.21.9",
     "vitest": "^1.4.0"
-
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
